cmake_minimum_required(VERSION 3.1)
project(accpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    chapter00/hello.cc
    chapter01/frame.cc
    chapter01/greet.cc
    chapter02/2-4.cc
    chapter02/2-5.cpp
    chapter02/2-7.cpp
    chapter02/2-8.cpp
    chapter02/2-9.cpp
    chapter02/frame.cc
    chapter03/3-2.cpp
    chapter03/3-3.cpp
    chapter03/3-4.cpp
    chapter03/3-5.cpp
    chapter03/3-6.cpp
    chapter03/avg.cc
    chapter03/med.cc
    chapter04/grade.cc
    chapter04/grade.h
    chapter04/main1.cc
    chapter04/main2.cc
    chapter04/main3.cc
    chapter04/median.cc
    chapter04/median.h
    chapter04/Student_info.cc
    chapter04/Student_info.h
    chapter04-Hao/4-2.cpp
    chapter04-Hao/4-5-ref.cpp
    chapter04-Hao/4-5.cpp
    chapter04-Hao/4-7.cpp
    chapter04-Hao/grade.cc
    chapter04-Hao/grade.h
    chapter04-Hao/main1.cc
    chapter04-Hao/main2.cc
    chapter04-Hao/main3.cc
    chapter04-Hao/median.cc
    chapter04-Hao/median.h
    chapter04-Hao/Student_info.cc
    chapter04-Hao/Student_info.h
    chapter05/5-1.cpp
    chapter05/5-2.cpp
    chapter05/ext_main.cc
    chapter05/fails_iters.cc
    chapter05/fails_list.cc
    chapter05/fails_vec1.cc
    chapter05/fails_vec2.cc
    chapter05/grade.cc
    chapter05/grade.h
    chapter05/list_main.cc
    chapter05/main.cpp
    chapter05/pics.cc
    chapter05/pics.h
    chapter05/pics_main.cc
    chapter05/split.cc
    chapter05/split.h
    chapter05/split_main.cc
    chapter05/split_main2.cc
    chapter05/test_extract_fails.cpp
    chapter05/test_extract_fails.h
    chapter06/analysis.cc
    chapter06/analysis.h
    chapter06/ext_fails1.cc
    chapter06/ext_fails2.cc
    chapter06/grade.cc
    chapter06/grade.h
    chapter06/grade_analysis.cc
    chapter06/grade_check.cc
    chapter06/palin.cc
    chapter06/split.cc
    chapter06/urls.cc
    chapter06/urls.h
    chapter06/urls_main.cc
    chapter07/grammar.cc
    chapter07/wc.cc
    chapter07/xref.cc
    chapter08/find2.h
    chapter08/median.h
    chapter08/my_max.cc
    chapter08/split.h
    chapter08/split_main.cc
    chapter08/stl_algs.h
    chapter09/grade.cc
    chapter09/grade.h
    chapter09/grading_prog.cc
    chapter09/Student_info.cc
    chapter09/Student_info.h
    chapter10/concat_files.cc
    chapter10/copyfile.cc
    chapter10/letter_grade.cc
    chapter10/pointer_example.cc
    chapter10/write_args.cc
    chapter11/analysis.cc
    chapter11/analysis.h
    chapter11/grade.cc
    chapter11/grade.h
    chapter11/grade_analysis.cc
    chapter11/grade_check.cc
    chapter11/main2.cc
    chapter11/main3.cc
    chapter11/median.h
    chapter11/Student_info.cc
    chapter11/Student_info.h
    chapter11/urls.cc
    chapter11/urls.h
    chapter11/urls_main.cc
    chapter11/Vec.h
    chapter12/analysis.cc
    chapter12/analysis.h
    chapter12/grade.cc
    chapter12/grade.h
    chapter12/grade_analysis.cc
    chapter12/grade_check.cc
    chapter12/main2.cc
    chapter12/main3.cc
    chapter12/Str.cc
    chapter12/Str.h
    chapter12/Student_info.cc
    chapter12/Student_info.h
    chapter12/urls.cc
    chapter12/urls.h
    chapter12/urls_main.cc
    chapter13/Core.cc
    chapter13/Core.h
    chapter13/grade.cc
    chapter13/grade.h
    chapter13/main_core.cc
    chapter13/main_core_ptrs.cc
    chapter13/main_grad.cc
    chapter13/main_orig.cc
    chapter13/read_hw.cc
    chapter13/Student_info.cc
    chapter13/Student_info.h
    chapter14/Core.cc
    chapter14/Core.h
    chapter14/grade.cc
    chapter14/grade.h
    chapter14/Handle.h
    chapter14/Ptr.h
    chapter14/read_hw.cc
    chapter14/Ref_handle.h
    chapter14/std_main1.cc
    chapter14/std_main2.cc
    chapter14/std_main3.cc
    chapter14/Str.cc
    chapter14/Str.h
    chapter14/Student_info.cc
    chapter14/Student_info.h
    chapter14/urls.cc
    chapter14/urls.h
    chapter14/urls_main.cc
    chapter14/Vec.h
    chapter14/Vec_clone.cc
    chapter15/main1.cc
    chapter15/main2.cc
    chapter15/Pic.cc
    chapter15/Pic.h
    chapter16/Core.cc
    chapter16/Core.h
    chapter16/grade.cc
    chapter16/grade.h
    chapter16/histo.cc
    chapter16/median.h
    chapter16/Pic.cc
    chapter16/Pic.h
    chapter16/Ptr.h
    chapter16/read_hw.cc
    chapter16/Student_info.cc
    chapter16/Student_info.h
    cpt1_string_test.cpp
    helloWorld.cpp
    run_time_measurer.cpp
    shortest.cpp)

add_executable(accpp ${SOURCE_FILES})